--- a/packages/sim-core/tsconfig.json
+++ b/packages/sim-core/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": ".",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "isolatedModules": false
   },
   "include": ["src", "test"]
 }
