--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dev:league": "npm -w services/league-service run start:dev",
     "dev:web": "npm -w apps/web run dev",
     "dev:mvp": "npm -w services/match-service run start:dev & npm -w services/simulation-service run start:dev & npm -w services/stream-service run start:dev & npm -w apps/web run dev",
-    "build": "npm run build -ws",
+    "build": "npm -w packages/contracts run build && npm -w packages/sim-core run build && npm -w services/match-service run build && npm -w services/simulation-service run build && npm -w services/stream-service run build && npm -w services/league-service run build && npm -w apps/web run build",
     "test": "npm run test -ws",
     "lint": "npm run lint -ws",
     "format": "npm run format -ws"
